# CMakeList.txt : CMake project for MinecraftServerTools, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (MinecraftServerTools "Emerald-Hammer.cpp" "Emerald-Hammer.h" "Commands.cpp")

# TODO: Add tests and install targets if needed.
